# shortly

./: Cargo.toml  LICENSE  README.md
shortly-app/: Cargo.toml
shortly-app/src/: app.rs  main.rs
shortly-data/: Cargo.toml
shortly-data/src/: db.rs  lib.rs  model.rs  url_repository.rs
shortly-data/src/model/: mod.rs
shortly-data/src/repository/: mod.rs  url_repository.rs
shortly-domain/: Cargo.toml
shortly-domain/src/: lib.rs
shortly-domain/src/mapper/: mod.rs  url_entry_mapper.rs
shortly-domain/src/model/: url_entry.rs
shortly-domain/src/use_case/: all_entries_use_case.rs  all_url_entries_use_case.rs  create_url_entry_use_case.rs  mod.rs  url_entry_use_case.rs
shortly-route/: Cargo.toml
shortly-route/src/: fallback.rs  lib.rs  modules.rs
shortly-route/src/model/: mod.rs  url_entry.rs
shortly-route/src/router/: mod.rs  url_entry_router.rs  url_redirect_router.rs
