[package]
name = "shortly-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.5.17"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

shortly-data = { path = "../shortly-data" }
shortly-domain = { path = "../shortly-domain" }
shortly-route = { path = "../shortly-route" }